force-app/main/default/objects/Xero_Key__c.object
<CustomObject>
    <fields>
        <fullName>AccCode_Application__c</fullName>
        <label>AccCode Application</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccCode_Bus__c</fullName>
        <label>AccCode Bus</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccCode_EAL__c</fullName>
        <label>AccCode EAL</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccCode_Enrolment__c</fullName>
        <label>AccCode Enrolment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccCode_Lunch__c</fullName>
        <label>AccCode Lunch</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccCode_Other__c</fullName>
        <label>AccCode Other</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccCode_Tuition__c</fullName>
        <label>AccCode Tuition</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Act_Date_Term__c</fullName>
        <label>Act Date (Term)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Act_Date_Yearly__c</fullName>
        <label>Act Date (Yearly)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Company_1__c</fullName>
        <label>Bank Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Company_2__c</fullName>
        <label>Bank Details2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language_Company_1__c</fullName>
        <label>Bank Details Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Details_Local_Language_Company_2__c</fullName>
        <label>Bank Details Local Language2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_1_Name_Local_Language__c</fullName>
        <label>Company 1 Name Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_1_Name__c</fullName>
        <label>Company 1 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_1_Short_Name_Local_Language__c</fullName>
        <label>Company 1 Short Name Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_1_Short_Name__c</fullName>
        <label>Company 1 Short Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_2_Name_Local_Language__c</fullName>
        <label>Company 2 Name Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_2_Name__c</fullName>
        <label>Company 2 Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_2_Short_Name_Local_Language__c</fullName>
        <label>Company 2 Short Name Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_2_Short_Name__c</fullName>
        <label>Company 2 Short Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate_Date__c</fullName>
        <label>Exchange Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exclude_From_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Prevents this Xero org from being synchronised periodically</inlineHelpText>
        <label>Exclude From Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Update_Timestamp__c</fullName>
        <description>Used in periodic Xero syncing to specify the next modified after value.</description>
        <label>Invoice Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Company_1__c</fullName>
        <label>Legal Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Company_2__c</fullName>
        <label>Legal Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Local_Language_Company_1__c</fullName>
        <label>Legal Address Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Address_Local_Language_Company_2__c</fullName>
        <label>Legal Address Local Language2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Rep_Company_1__c</fullName>
        <label>Legal Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Rep_Company_2__c</fullName>
        <label>Legal Rep2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Rep_Local_Language_Company_1__c</fullName>
        <label>Legal Rep Local Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Rep_Local_Language_Company_2__c</fullName>
        <label>Legal Rep Local Language2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address_Company_1__c</fullName>
        <label>Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Address_Company_2__c</fullName>
        <label>Location Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Address_Local_Language_Company1__c</fullName>
        <label>Location Address Local Language</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Address_Local_Language_Company2__c</fullName>
        <label>Location Address Local Language2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Update_Timestamp__c</fullName>
        <description>Used in periodic Xero syncing to specify the next modified after value.</description>
        <label>Payment Update Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <label>Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Term_End_Date__c</fullName>
        <label>Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Term_Start_Date__c</fullName>
        <label>Term Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tracking_Category_1_Company__c</fullName>
        <inlineHelpText>Specify the &apos;TrackingCategoryID&apos; taken from Xero for this tracking category. Leave blank if not in use.</inlineHelpText>
        <label>Tracking Category 1 (Company)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_Category_2_Campus_Misc__c</fullName>
        <inlineHelpText>Specify the &apos;TrackingCategoryID&apos; taken from Xero for this tracking category. Leave blank if not in use.</inlineHelpText>
        <label>Tracking Category 2 (Campus/Misc)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_End_Date__c</fullName>
        <label>Year End Date</label>
        <type>Date</type>
    </fields>
    <label>Contract Setup</label>
    <nameField>
        <label>Contract Setup</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Edit_of_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    $User.Id != &quot;0056F000008tfhZ&quot;,
    OR(
       ISCHANGED(Name),
       ISCHANGED(Consumer_Key__c),
       ISCHANGED(Private_Key__c)
       )
    )</errorConditionFormula>
        <errorMessage>You do not have permission to change the values in the &apos;Contract Setup&apos; and &apos;Consumer Key&apos; fields. Please contact your system administrator for assistance.</errorMessage>
    </validationRules>
</CustomObject>